<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_page_bg">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/tbl"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height"
        app:qmui_topbar_bg_color="@color/colorPrimary"
        app:qmui_topbar_need_separator="false"
        app:qmui_topbar_title_color="@color/color_white"
        app:qmui_topbar_title_text_size="16sp"/>

    <com.marsye.vipvideo.widget.RecyclerViewBanner
        android:id="@+id/rv_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/tbl"
        app:rvb_indicatorMargin="5dp"
        app:rvb_indicatorSelectedSrc="@color/color_green"
        app:rvb_indicatorSize="5dp"
        app:rvb_indicatorSpace="5dp"
        app:rvb_indicatorUnselectedSrc="@color/color_gray"/>

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="10dp"
        android:singleLine="true"
        android:text="@string/home_notice"
        android:textColor="@color/color_red"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/rv_banner"/>

    <TextView
        android:id="@+id/tv_tencent_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:drawablePadding="10dp"
        android:drawableTop="@mipmap/c_qq"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home_tencent_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notice"
        app:layout_constraintWidth_percent=".25"/>

    <TextView
        android:id="@+id/tv_aiqiyi_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:drawablePadding="10dp"
        android:drawableTop="@mipmap/c_qiyi"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home_aiqiyi_menu"
        app:layout_constraintLeft_toRightOf="@+id/tv_tencent_menu"
        app:layout_constraintTop_toBottomOf="@+id/tv_notice"
        app:layout_constraintWidth_percent=".25"/>

    <TextView
        android:id="@+id/tv_youku_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:drawablePadding="10dp"
        android:drawableTop="@mipmap/c_youku"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home_youku_menu"
        app:layout_constraintLeft_toRightOf="@+id/tv_aiqiyi_menu"
        app:layout_constraintTop_toBottomOf="@+id/tv_notice"
        app:layout_constraintWidth_percent=".25"/>

    <TextView
        android:id="@+id/tv_le_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:drawablePadding="10dp"
        android:drawableTop="@mipmap/c_levp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home_youku_menu"
        app:layout_constraintLeft_toRightOf="@+id/tv_youku_menu"
        app:layout_constraintTop_toBottomOf="@+id/tv_notice"
        app:layout_constraintWidth_percent=".25"/>

    <TextView
        android:id="@+id/tv_pptv_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:drawablePadding="10dp"
        android:drawableTop="@mipmap/c_pptv"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home_pptv_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tencent_menu"
        app:layout_constraintWidth_percent=".25"/>

    <TextView
        android:id="@+id/tv_sohu_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:drawablePadding="10dp"
        android:drawableTop="@mipmap/c_sohu"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home_sohu_menu"
        app:layout_constraintLeft_toRightOf="@+id/tv_pptv_menu"
        app:layout_constraintTop_toBottomOf="@+id/tv_tencent_menu"
        app:layout_constraintWidth_percent=".25"/>

    <TextView
        android:id="@+id/tv_imgo_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:drawablePadding="10dp"
        android:drawableTop="@mipmap/c_imgo"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home_imgo_menu"
        app:layout_constraintLeft_toRightOf="@+id/tv_sohu_menu"
        app:layout_constraintTop_toBottomOf="@+id/tv_tencent_menu"
        app:layout_constraintWidth_percent=".25"/>

    <TextView
        android:id="@+id/tv_1905_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:drawablePadding="10dp"
        android:drawableTop="@mipmap/c_1905"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/home_1905_menu"
        app:layout_constraintLeft_toRightOf="@+id/tv_imgo_menu"
        app:layout_constraintTop_toBottomOf="@+id/tv_tencent_menu"
        app:layout_constraintWidth_percent=".25"/>

</android.support.constraint.ConstraintLayout>